更新项目依赖，移除 pnpm，添加 ahooks、dayjs、motion、react-hook-form、react-number-format、sass、unocss 和 unplugin-auto-import，调整 tsconfig 配置，新增路由守卫和404页面，重构应用结构，删除旧的 Home 页面，优化登录页面和项目首页。

--- a/app/app-site/package.json
+++ b/app/app-site/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ahooks": "catalog:",
     "antd": "catalog:",
+    "dayjs": "catalog:",
+    "motion": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "react-hook-form": "catalog:",
+    "react-number-format": "catalog:",
     "react-router-dom": "catalog:"
   },
   "devDependencies": {
@@ -20,7 +25,10 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react": "catalog:",
+    "sass": "catalog:",
     "typescript": "catalog:",
+    "unocss": "catalog:",
+    "unplugin-auto-import": "catalog:",
     "vite": "catalog:",
     "vite-tsconfig-paths": "catalog:"
   }
