更新 ESLint 配置以支持 React，添加相关 ESLint 插件和依赖，升级 react-router-dom 版本，新增 @ant-design/icons 依赖，优化 pnpm 工作区配置。

--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "release": "bumpp -r && pnpm -r publish",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
-    "prepare": "simple-git-hooks"
+    "prepare": "simple-git-hooks",
+    "clean": "pnpm -r exec rm -rf node_modules && rm -rf node_modules"
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
     "@antfu/ni": "catalog:",
+    "@eslint-react/eslint-plugin": "catalog:",
     "@types/node": "catalog:",
     "bumpp": "catalog:",
     "eslint": "catalog:",
+    "eslint-plugin-react-hooks": "catalog:",
+    "eslint-plugin-react-refresh": "catalog:",
     "lint-staged": "catalog:",
     "simple-git-hooks": "catalog:",
     "tsx": "catalog:",
