--- a/app/app-site/package.json
+++ b/app/app-site/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "catalog:",
     "ahooks": "catalog:",
     "antd": "catalog:",
     "dayjs": "catalog:",
