--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,8 +5,10 @@ packages:
   - examples/*
   - app/*
 catalog:
+  '@ant-design/icons': ^5.6.1
   '@antfu/eslint-config': ^4.2.1
   '@antfu/ni': ^23.3.1
+  '@eslint-react/eslint-plugin': ^1.35.0
   '@iconify-json/svg-spinners': ^1.2.2
   '@shikijs/vitepress-twoslash': ^2.3.2
   '@types/node': ^22.13.4
@@ -18,6 +20,8 @@ catalog:
   bumpp: ^10.0.3
   dayjs: ^1.11.13
   eslint: ^9.20.1
+  eslint-plugin-react-hooks: ^5.2.0
+  eslint-plugin-react-refresh: ^0.4.19
   lint-staged: ^15.4.3
   motion: ^12.5.0
   react: ^18.3.1
@@ -25,7 +29,7 @@ catalog:
   react-hook-form: ^7.54.2
   react-i18next: ^14.1.2
   react-number-format: ^5.4.3
-  react-router-dom: ^6.22.0
+  react-router-dom: ^7.3.0
   sass: ^1.72.0
   simple-git-hooks: ^2.11.1
   tsx: ^4.19.2
