更新 pnpm-lock.yaml 和 pnpm-workspace.yaml，新增 @ant-design/pro-components 和 zustand 依赖，确保项目依赖的完整性和一致性。

--- a/app/app-site/package.json
+++ b/app/app-site/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "catalog:",
+    "@ant-design/pro-components": "catalog:",
     "ahooks": "catalog:",
     "antd": "catalog:",
     "dayjs": "catalog:",
@@ -19,7 +20,8 @@
     "react-dom": "catalog:",
     "react-hook-form": "catalog:",
     "react-number-format": "catalog:",
-    "react-router-dom": "catalog:"
+    "react-router-dom": "catalog:",
+    "zustand": "catalog:"
   },
   "devDependencies": {
     "@types/node": "catalog:",
