--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ packages:
   - app/*
 catalog:
   '@ant-design/icons': ^5.6.1
+  '@ant-design/pro-components': ^2.8.6
   '@antfu/eslint-config': ^4.2.1
   '@antfu/ni': ^23.3.1
   '@eslint-react/eslint-plugin': ^1.35.0
@@ -42,3 +43,4 @@ catalog:
   vitepress: ^2.0.0-alpha.2
   vitepress-plugin-group-icons: ^1.3.5
   vitest: ^3.0.5
+  zustand: ^5.0.3
