更新 pnpm-lock.yaml 和 pnpm-workspace.yaml，新增 axios 依赖，更新 README 文件以反映项目结构和技术栈，确保文档与项目一致性。

--- a/app/app-site/package.json
+++ b/app/app-site/package.json
@@ -14,6 +14,7 @@
     "@ant-design/pro-components": "catalog:",
     "ahooks": "catalog:",
     "antd": "catalog:",
+    "axios": "catalog:",
     "dayjs": "catalog:",
     "motion": "catalog:",
     "react": "catalog:",
