--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -18,6 +18,7 @@ catalog:
   '@vitejs/plugin-react': ^4.3.4
   ahooks: ^3.8.4
   antd: ^5.24.4
+  axios: ^1.8.3
   bumpp: ^10.0.3
   dayjs: ^1.11.13
   eslint: ^9.20.1
