新增 aero-utils 依赖，更新相关配置以支持构建和使用；在登录页面引入 aero-utils 的功能。

--- a/app/app-site/package.json
+++ b/app/app-site/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "catalog:",
     "@ant-design/pro-components": "catalog:",
+    "aero-utils": "workspace:*",
     "ahooks": "catalog:",
     "antd": "catalog:",
     "axios": "catalog:",
