feat(icons): 新增 vite-plugin-svgr 支持 SVG 图标组件
在项目中引入 vite-plugin-svgr 以支持 SVG 图标的动态加载和使用。更新相关配置文件，包括 pnpm-lock.yaml、pnpm-workspace.yaml 和 Vite 配置，确保插件正常工作。同时新增 Icon 组件以便于在应用中使用 SVG 图标，并更新类型定义以支持自动导入功能。

--- a/app/app-site/package.json
+++ b/app/app-site/package.json
@@ -35,6 +35,7 @@
     "unocss": "catalog:",
     "unplugin-auto-import": "catalog:",
     "vite": "catalog:",
+    "vite-plugin-svgr": "catalog:",
     "vite-tsconfig-paths": "catalog:"
   }
 }
