--- a/app/app-site/tsconfig.json
+++ b/app/app-site/tsconfig.json
@@ -11,6 +11,7 @@
       "@/*": ["src/*"]
     },
     "resolveJsonModule": true,
+    "types": ["vite/client"],
     "allowImportingTsExtensions": true,
     "allowUmdGlobalAccess": true,
     "strict": true,
