--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -40,6 +40,7 @@ catalog:
   unocss: ^65.5.0
   unplugin-auto-import: ^19.1.0
   vite: ^6.2.2
+  vite-plugin-svgr: ^4.3.0
   vite-tsconfig-paths: ^5.1.4
   vitepress: ^2.0.0-alpha.2
   vitepress-plugin-group-icons: ^1.3.5
