--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "eslint": "catalog:",
     "eslint-plugin-react-hooks": "catalog:",
     "eslint-plugin-react-refresh": "catalog:",
+    "jsdom": "catalog:",
     "lint-staged": "catalog:",
     "simple-git-hooks": "catalog:",
+    "testing-library/react": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:",
     "unbuild": "catalog:",
