--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,6 +12,7 @@ catalog:
   '@eslint-react/eslint-plugin': ^1.35.0
   '@iconify-json/svg-spinners': ^1.2.2
   '@shikijs/vitepress-twoslash': ^2.3.2
+  '@testing-library/react': ^16.3.0
   '@types/node': ^22.13.4
   '@types/react': ^19.0.10
   '@types/react-dom': ^19.0.4
@@ -24,6 +25,7 @@ catalog:
   eslint: ^9.20.1
   eslint-plugin-react-hooks: ^5.2.0
   eslint-plugin-react-refresh: ^0.4.19
+  jsdom: ^26.1.0
   lint-staged: ^15.4.3
   motion: ^12.5.0
   react: ^18.3.1
