feat(package): 更新项目配置和依赖以支持新功能
- 将项目版本更新至 1.0.0。
- 修改构建和开发脚本，使用 pnpm 进行并行处理。
- 新增依赖项 antd、react 和 react-dom，并更新相关类型定义。
- 在 pnpm-lock.yaml 中添加 jsdom 依赖以增强测试能力。
- 新增 tsconfig.base.json 和 tsconfig.json 文件，配置 TypeScript 编译选项。
- 新增 @core/preferences 包，提供主题和偏好设置管理功能。
- 更新登录页面以集成新的主题工具栏和样式。

--- a/app/app-site/package.json
+++ b/app/app-site/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "catalog:",
     "@ant-design/pro-components": "catalog:",
+    "@core/preferences": "workspace:*",
     "aero-utils": "workspace:*",
     "ahooks": "catalog:",
     "antd": "catalog:",
@@ -30,7 +31,6 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react": "catalog:",
-    "sass": "catalog:",
     "typescript": "catalog:",
     "unocss": "catalog:",
     "unplugin-auto-import": "catalog:",
