--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,9 +1,6 @@
 packages:
-  - playground
-  - docs
-  - packages/*
-  - examples/*
-  - app/*
+  - 'packages/*'
+  - 'app/*'
 catalog:
   '@ant-design/icons': ^5.6.1
   '@ant-design/pro-components': ^2.8.6
@@ -12,7 +9,6 @@ catalog:
   '@eslint-react/eslint-plugin': ^1.35.0
   '@iconify-json/svg-spinners': ^1.2.2
   '@shikijs/vitepress-twoslash': ^2.3.2
-  '@testing-library/react': ^16.3.0
   '@types/node': ^22.13.4
   '@types/react': ^19.0.10
   '@types/react-dom': ^19.0.4
@@ -34,7 +30,6 @@ catalog:
   react-i18next: ^14.1.2
   react-number-format: ^5.4.3
   react-router-dom: ^7.3.0
-  sass: ^1.72.0
   simple-git-hooks: ^2.11.1
   tsx: ^4.19.2
   typescript: ^5.7.3
