feat(node-modules): 新增 node-modules-inspector 配置及相关依赖
- 在 .gitignore 中添加 node-modules-inspector 以排除相关文件。
- 新增 node-modules-inspector.config.ts 文件，配置默认过滤器和设置。
- 在 package.json 中添加 node-modules-inspect 脚本以便于使用。
- 更新 pnpm-lock.yaml 和 pnpm-workspace.yaml 文件以引入 node-modules-inspector 依赖。
- 更新 tsconfig.base.json 和 tsconfig.json 文件以包含 node-modules-inspector.config.ts。

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "pnpm -r --parallel dev",
     "dev:app-site": "pnpm --filter app-site dev",
     "build:aero-utils": "pnpm --filter aero-utils build",
+    "node-modules-inspect": "pnpx node-modules-inspector",
     "lint": "pnpm -r --parallel lint",
     "prepublishOnly": "nr build",
     "release": "bumpp -r && pnpm -r publish",
@@ -35,6 +36,7 @@
     "eslint-plugin-react-refresh": "catalog:",
     "jsdom": "catalog:",
     "lint-staged": "catalog:",
+    "node-modules-inspector": "catalog:",
     "simple-git-hooks": "catalog:",
     "tsx": "catalog:",
     "unbuild": "catalog:",
