--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
   ],
   "include": [
     "packages/*/src",
-    "apps/*/src"
+    "apps/*/src",
+    "node-modules-inspector.config.ts"
   ],
   "exclude": [
     "**/node_modules",
