--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -24,6 +24,7 @@ catalog:
   jsdom: ^26.1.0
   lint-staged: ^15.4.3
   motion: ^12.5.0
+  node-modules-inspector: ^0.6.6
   react: ^18.3.1
   react-dom: ^18.3.1
   react-hook-form: ^7.54.2
