feat(icons): 更新 IconFont 组件及相关配置以支持新图标和优化使用
- 新增 unbuild 依赖于 pnpm-lock.yaml，确保构建工具的兼容性。
- 更新 IconFont 组件，修改在线脚本 URL，提升图标加载的灵活性。
- 在登录页面中调整 IconFont 的使用，增加图标大小以改善视觉效果。
- 在工具栏中引入 IconFont 组件，优化主题切换按钮的图标展示。

--- a/packages/preferences/package.json
+++ b/packages/preferences/package.json
@@ -40,6 +40,7 @@
     "eslint": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "unbuild": "catalog:"
   }
 }
